--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,100 @@
+/* General styles */
+
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Space+Grotesk:wght@300..700&display=swap');
+
+:root {
+    --purple: #6f00e0;
+    --black: #131313;
+    --magnolia: #fdf7ffff;
+    --redwood: #b25347ff;
+    --electric-green: #b8d479ff;
+    --site-edge-margin: 1.5rem;
+    --nav-element-margin: 0.8rem;
+    --section-margin-top: 4rem;
+    --main-side-margin: 4rem;
+    --element-margin: 1.5rem;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    background-color: blueviolet;
-    color: black;
+    background-color: var(--purple);
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    font-family: 'JetBrains Mono', monospace;
+    font-optical-sizing: auto;
+    font-size: 1rem;
+    font-weight: 300;
+    line-height: 1.5;
+    min-height: 100vh;
+    display: grid;
+    grid-template-areas:
+        'margin content menu'
+        'footer footer menu'
+        'bottom-margin bottom-margin bottom-margin';
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-rows: 4fr 0.5fr 0.5fr;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Space Grotesk', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    background-color: var(--black);
+    color: var(--magnolia);
+    width: fit-content;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+}
+
+/* End of general styles */
+
+/* Layout styles */
+main {
+    border: 2px solid var(--magnolia);
+    grid-area: content;
+}
+
+/* End of layout styles */
+
+/* Reusable component styles */
+
+header {
+    grid-area: menu;
+}
+
+footer {
+    grid-area: footer;
+}
+
+.dev {
+    position: absolute;
+    bottom: 1rem;
+    background-color: var(--redwood);
+    color: white;
+}
+
+/* End of reusable component styles */
+
+/* Page specific styles */
+
+.workbench {
+    border: 2px solid red;
+    display: grid;
+    height: 100%;
 }
