feat: add basic collections and data to render dummy content;

--- a/src/_includes/layouts/bookshelf.njk
+++ b/src/_includes/layouts/bookshelf.njk
@@ -1,8 +1,7 @@
 {% extends "layouts/base.njk" %}
 
 {% block content %}
-<div>
 {{title}}
-</div>
+{% include "partials/list.njk" %}
 
 {% endblock %}
