--- a/src/_includes/layouts/explorations-index.njk
+++ b/src/_includes/layouts/explorations-index.njk
@@ -1,8 +1,8 @@
 {% extends "layouts/base.njk" %}
 
 {% block content %}
-<div>
 {{title}}
-</div>
+<pre>{{collections.explorations}}</pre>
+{% include "partials/list.njk" %}
 
 {% endblock %}
