--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,23 +22,29 @@
 }
 
 body {
+    border: 1px solid red;
     background-color: var(--purple);
     width: 100%;
-    overflow-x: hidden;
     overflow-y: scroll;
     font-family: 'JetBrains Mono', monospace;
     font-optical-sizing: auto;
     font-size: 1rem;
     font-weight: 300;
     line-height: 1.5;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     display: grid;
     grid-template-areas:
         'margin content menu'
         'footer footer menu'
         'bottom-margin bottom-margin bottom-margin';
+    /* grid-template-columns: 1fr 4fr 1fr; */
     grid-template-columns: 1fr 4fr 1fr;
-    grid-template-rows: 4fr 0.5fr 0.5fr;
+    grid-template-rows: 4fr 0.5fr 0.2fr;
+}
+
+body,
+html {
+    height: 100%;
 }
 
 h1,
@@ -60,9 +66,10 @@ ul {
 }
 
 a {
+    color: var(--black);
 }
 
-/* End of general styles */
+/* End of General styles */
 
 /* Layout styles */
 main {
@@ -70,31 +77,76 @@ main {
     grid-area: content;
 }
 
-/* End of layout styles */
+.list {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.posts {
+    border: 2px solid green;
+}
+
+.bookshelf {
+    border: 2px solid brown;
+}
+
+/* End of Layout styles */
 
 /* Reusable component styles */
 
 header {
     grid-area: menu;
+    border: 1px solid red;
 }
 
 footer {
     grid-area: footer;
+    background-color: var(--black);
+    color: var(--magnolia);
 }
 
-.dev {
-    position: absolute;
-    bottom: 1rem;
-    background-color: var(--redwood);
-    color: white;
+.card {
+    border: var(--black);
 }
 
-/* End of reusable component styles */
+.card h5 a {
+    color: var(--magnolia);
+}
+
+/* End of Reusable component styles */
 
 /* Page specific styles */
+
+.bookshelf-item {
+}
+
+.exploration {
+}
+
+.thought {
+}
 
 .workbench {
     border: 2px solid red;
     display: grid;
     height: 100%;
 }
+
+/* End of Page specific styles */
+
+/* Environment specific styles */
+
+.dev {
+    font-size: 0.75rem;
+    background-color: var(--redwood);
+    color: var(--magnolia);
+    width: fit-content;
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    padding: 4px;
+}
+/* End of Environment specific styles */
