--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,4 +1,9 @@
 {% extends "layouts/base.njk" %}
 
 {% block content %}
+    <h2>{{title}}</h2>
+    <article>
+        {{content | safe}}
+    </article>
+
 {% endblock %}
