--- a/src/_includes/layouts/thoughts-index.njk
+++ b/src/_includes/layouts/thoughts-index.njk
@@ -1,8 +1,7 @@
 {% extends "layouts/base.njk" %}
 
 {% block content %}
-<div>
 {{title}}
-</div>
+{% include "partials/list.njk" %}
 
 {% endblock %}
