create individual templates for Exploration and Thought

--- a/src/_includes/layouts/thought.njk
+++ b/src/_includes/layouts/thought.njk
@@ -1,9 +1,13 @@
 {% extends "layouts/base.njk" %}
 
 {% block content %}
+
+<section class="thought">
     <h2>{{title}}</h2>
+    <p>{{date}}</p>
     <article>
         {{content | safe}}
     </article>
+</section>
 
 {% endblock %}
