fix first step of log entry collection through Obsidian and 11ty

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,7 +8,7 @@
 </head>
 <body>
   {% if env == "development" %}
-    <div class="dev">Development Mode</div>
+    <!-- <div class="dev">Development Mode</div> -->
   {%endif%}
   {% include "partials/header.njk" %}
   <main tabindex="-1">
