--- a/src/css/style.css
+++ b/src/css/style.css
@@ -135,6 +135,17 @@ footer {
     height: 100%;
 }
 
+.log-entry.log-broke {
+    border: 4px solid red;
+}
+
+.card.exploration {
+}
+
+.card.exploration.exploration-broke {
+    border: 4px solid red;
+}
+
 /* End of Page specific styles */
 
 /* Environment specific styles */
