--- a/src/_includes/partials/list.njk
+++ b/src/_includes/partials/list.njk
@@ -10,7 +10,7 @@
     {% set cardType = 'bookshelf-item' %}
     {% set listClass = 'bookshelf' %}
 {% elseif listType == 'explorations' %}
-    {% set items = collections.explorationsWithLogs %}
+    {% set items = collections.explorations %}
     {% set cardType = 'exploration' %}
     {% set listClass = 'posts' %}
 {% elseif listType == 'thoughts' %}
