--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,7 +52,13 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a {
     font-family: 'Space Grotesk', sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
